margo/src/layout/snapshots/margo__layout__snapshot_tests__tile_two_windows_default_mfact.snap
---
source: margo/src/layout/snapshot_tests.rs
expression: format_arranged(&tile(&ctx))
---
 0  x=8      y=8      w=1047   h=1064
 1  x=1063   y=8      w=849    h=1064
