margo/src/layout/snapshots/margo__layout__snapshot_tests__tile_two_windows_mfact_50.snap
---
source: margo/src/layout/snapshot_tests.rs
expression: format_arranged(&tile(&ctx))
---
 0  x=8      y=8      w=952    h=1064
 1  x=968    y=8      w=944    h=1064
