margo/src/layout/snapshots/margo__layout__snapshot_tests__vertical_tile_two_windows.snap
---
source: margo/src/layout/snapshot_tests.rs
expression: format_arranged(&vertical_tile(&ctx))
---
 0  x=8      y=8      w=1184   h=1047
 1  x=8      y=1063   w=1184   h=849
